force-app/main/default/objects/Signature_Request__c/Signature_Request__c.object-meta.xml
<CustomObject>
    <label>Signature Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Signature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>