force-app/main/default/objects/Signature_Request__c/fields/ArchivedDate__c.field-meta.xml
<CustomField>
    <fullName>ArchivedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ArchivedDate</label>
    <type>DateTime</type>
</CustomField>