force-app/main/default/objects/Signature_Request__c/fields/Assembled_Document__c.field-meta.xml
<CustomField>
    <fullName>Assembled_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assembled_Document</label>
    <referenceTo>Assembled_Document__c</referenceTo>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>