force-app/main/default/objects/Signature_Request__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>