force-app/main/default/objects/Signature_Request__c/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CompletedDate</label>
    <type>DateTime</type>
</CustomField>