force-app/main/default/objects/Signature_Request__c/fields/Completion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Completion_Rate__c</fullName>
    <label>Completion Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>