force-app/main/default/objects/Signature_Request__c/fields/CompletionTime__c.field-meta.xml
<CustomField>
    <fullName>CompletionTime__c</fullName>
    <label>CompletionTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>