force-app/main/default/objects/Signature_Request__c/fields/CompletionTimeHours__c.field-meta.xml
<CustomField>
    <fullName>CompletionTimeHours__c</fullName>
    <label>CompletionTimeHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>