force-app/main/default/objects/Signature_Request__c/fields/ComplianceValidated__c.field-meta.xml
<CustomField>
    <fullName>ComplianceValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ComplianceValidated</label>
    <type>Checkbox</type>
</CustomField>