force-app/main/default/objects/Signature_Request__c/fields/CRM_Response__c.field-meta.xml
<CustomField>
    <fullName>CRM_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>