force-app/main/default/objects/Signature_Request__c/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DeviceType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>