force-app/main/default/objects/Signature_Request__c/fields/Document_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>Document_Complexity_Score__c</fullName>
    <label>Document Complexity Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>