force-app/main/default/objects/Signature_Request__c/fields/Document_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Config_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Config Id</label>
    <referenceTo>DocumentLifecycleConfiguration__c</referenceTo>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>