force-app/main/default/objects/Signature_Request__c/fields/Document_Hash__c.field-meta.xml
<CustomField>
    <fullName>Document_Hash__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>