force-app/main/default/objects/Signature_Request__c/fields/Document_Lifecycle_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Document_Lifecycle_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document Lifecycle Configuration</label>
    <referenceTo>DocumentLifecycleConfiguration__c</referenceTo>
    <relationshipName>Signature_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>