force-app/main/default/objects/Signature_Request__c/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocumentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>