force-app/main/default/objects/Signature_Request__c/fields/DocumentTitle__c.field-meta.xml
<CustomField>
    <fullName>DocumentTitle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DocumentTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>