force-app/main/default/objects/Signature_Request__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExpirationDate</label>
    <type>Date</type>
</CustomField>