force-app/main/default/objects/Signature_Request__c/fields/ExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiredDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExpiredDate</label>
    <type>DateTime</type>
</CustomField>