force-app/main/default/objects/Signature_Request__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>