force-app/main/default/objects/Signature_Request__c/fields/ExternalProvider__c.field-meta.xml
<CustomField>
    <fullName>ExternalProvider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExternalProvider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>