force-app/main/default/objects/Signature_Request__c/fields/Face_Token__c.field-meta.xml
<CustomField>
    <fullName>Face_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Face Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>