force-app/main/default/objects/Signature_Request__c/fields/Fraud_Analysis_Complete__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analysis_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Analysis Complete</label>
    <type>Checkbox</type>
</CustomField>