force-app/main/default/objects/Signature_Request__c/fields/Fraud_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analysis_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraud Analysis Completed</label>
    <type>Checkbox</type>
</CustomField>