force-app/main/default/objects/Signature_Request__c/fields/Fraud_Analysis_Details__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Analysis_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fraud Analysis Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>