force-app/main/default/objects/Signature_Request__c/fields/Fraud_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Risk_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fraud Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>