force-app/main/default/objects/Signature_Request__c/fields/Fraud_Score__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Score__c</fullName>
    <label>Fraud Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>