force-app/main/default/objects/Signature_Request__c/fields/Identity_Verification__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Identity Verification</label>
    <referenceTo>Identity_Verification__c</referenceTo>
    <relationshipLabel>Signature Requests</relationshipLabel>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>