force-app/main/default/objects/Signature_Request__c/fields/IP_City__c.field-meta.xml
<CustomField>
    <fullName>IP_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IP City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>