force-app/main/default/objects/Signature_Request__c/fields/IP_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>IP_Region_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IP Region Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>