force-app/main/default/objects/Signature_Request__c/fields/IPAddress__c.field-meta.xml
<CustomField>
    <fullName>IPAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IPAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>