force-app/main/default/objects/Signature_Request__c/fields/MouseMovementScore__c.field-meta.xml
<CustomField>
    <fullName>MouseMovementScore__c</fullName>
    <label>MouseMovementScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>