force-app/main/default/objects/Signature_Request__c/fields/NotificationCount__c.field-meta.xml
<CustomField>
    <fullName>NotificationCount__c</fullName>
    <label>NotificationCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>