force-app/main/default/objects/Signature_Request__c/fields/NotificationsSent__c.field-meta.xml
<CustomField>
    <fullName>NotificationsSent__c</fullName>
    <label>NotificationsSent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>