force-app/main/default/objects/Signature_Request__c/fields/Provider_Ref__c.field-meta.xml
<CustomField>
    <fullName>Provider_Ref__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider_Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>