force-app/main/default/objects/Signature_Request__c/fields/ReminderCount__c.field-meta.xml
<CustomField>
    <fullName>ReminderCount__c</fullName>
    <label>ReminderCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>