force-app/main/default/objects/Signature_Request__c/fields/RemindersEnabled__c.field-meta.xml
<CustomField>
    <fullName>RemindersEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RemindersEnabled</label>
    <type>Checkbox</type>
</CustomField>