force-app/main/default/objects/Signature_Request__c/fields/RequesterUserId__c.field-meta.xml
<CustomField>
    <fullName>RequesterUserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RequesterUserId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signature_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>