force-app/main/default/objects/Signature_Request__c/fields/Requesting_User__c.field-meta.xml
<CustomField>
    <fullName>Requesting_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Signature_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>