force-app/main/default/objects/Signature_Request__c/fields/Require_All_Signatures__c.field-meta.xml
<CustomField>
    <fullName>Require_All_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require All Signatures</label>
    <type>Checkbox</type>
</CustomField>