force-app/main/default/objects/Signature_Request__c/fields/Risk_Factors_Detected__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors_Detected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Factors Detected</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>