force-app/main/default/objects/Signature_Request__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>