force-app/main/default/objects/Signature_Request__c/fields/Session_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Duration_Minutes__c</fullName>
    <label>Session Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>