force-app/main/default/objects/Signature_Request__c/fields/Signature_Data__c.field-meta.xml
<CustomField>
    <fullName>Signature_Data__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature_Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>