force-app/main/default/objects/Signature_Request__c/fields/Signature_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Method__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature_Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>