force-app/main/default/objects/Signature_Request__c/fields/SignatureData__c.field-meta.xml
<CustomField>
    <fullName>SignatureData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SignatureData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>