force-app/main/default/objects/Signature_Request__c/fields/SignatureMethod__c.field-meta.xml
<CustomField>
    <fullName>SignatureMethod__c</fullName>
    <label>SignatureMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Draw</fullName>
            </value>
            <value>
                <fullName>Upload</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>