force-app/main/default/objects/Signature_Request__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signed_Date</label>
    <type>DateTime</type>
</CustomField>