force-app/main/default/objects/Signature_Request__c/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer</label>
    <referenceTo>Signer__c</referenceTo>
    <relationshipName>Signature_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>