force-app/main/default/objects/Signature_Request__c/fields/SignerInfoJSON__c.field-meta.xml
<CustomField>
    <fullName>SignerInfoJSON__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SignerInfoJSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>