force-app/main/default/objects/Signature_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>DECLINED</fullName>
                <isActive>false</isActive>
                <label>DECLINED</label>
            </value>
            <value>
                <fullName>FAILED.</fullName>
                <isActive>false</isActive>
                <label>FAILED.</label>
            </value>
            <value>
                <fullName>SENT</fullName>
                <isActive>false</isActive>
                <label>SENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>