force-app/main/default/objects/Signature_Request__c/fields/Time_To_Complete_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Complete_Seconds__c</fullName>
    <label>Time To Complete Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>